cluster/gitops/data/dragonfly/operator/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-operator
specs:
  - description: dragonfly-operator
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: dragonfly-operator
        app.kubernetes.io/instance: dragonfly-operator
    egress:
      # k8s resource management
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
      # Instance management
      - toEndpoints:
          - matchExpressions:
              - key: io.kubernetes.pod.namespace
                operator: Exists
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - dragonfly
              - key: app.kubernetes.io/part-of
                operator: In
                values:
                  - dragonfly
        toPorts:
          - ports:
              - port: "9999"
                protocol: TCP
    ingress:
      # Kubelet to webservice for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8081"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: metrics
                protocol: TCP
